clusters/talos-robbinsdale/apps/media/app/readarr/deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: readarr
spec:
  replicas: 1
  selector:
    matchLabels:
      app: readarr
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: readarr
    spec:
      containers:
        - name: readarr
          image: lscr.io/linuxserver/readarr:develop
          ports:
            - name: http
              containerPort: 8787
              protocol: TCP
          volumeMounts:
            - name: books-volume
              mountPath: /books
            - name: downloads-volume
              mountPath: /downloads
            - name: config-volume
              mountPath: /config
      volumes:
        - name: books-volume
          persistentVolumeClaim:
            claimName: readarr-books-unas
        - name: downloads-volume
          persistentVolumeClaim:
            claimName: transmission-books-data-unas
        - name: config-volume
          persistentVolumeClaim:
            claimName: readarr-config-ceph
