clusters/talos-robbinsdale/apps/media/app/readarr/app.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: readarr
spec:
  replicas: 1
  selector:
    matchLabels:
      app: readarr
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: readarr
    spec:
      containers:
      - name: readarr
        image: lscr.io/linuxserver/readarr:1.0.1126
        ports:
        - name: http
          containerPort: 8787
          protocol: TCP
        volumeMounts:
        - name: config
          mountPath: /config
        - name: media
          mountPath: /media-share
      volumes:
      - name: config
        persistentVolumeClaim:
          claimName: readarr-config
      - name: media
        persistentVolumeClaim:
          claimName: media-share
---
apiVersion: v1
kind: Service
metadata:
  name: readarr
spec:
  selector:
    app: readarr
  ports:
  - name: http
    port: 8787
    protocol: TCP
    targetPort: 8787
