clusters/talos-robbinsdale/apps/media/app/readarr/httproute.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: readarr
  annotations:
    item.homer.rajsingh.info/name: Readarr
    item.homer.rajsingh.info/subtitle: Book Collection Manager
    item.homer.rajsingh.info/logo: https://raw.githubusercontent.com/walkxcode/dashboard-icons/main/svg/readarr.svg
    item.homer.rajsingh.info/keywords: tv, series, automation
    service.homer.rajsingh.info/name: Media
    service.homer.rajsingh.info/icon: fas fa-tv
spec:
  parentRefs:
  - group: gateway.networking.k8s.io
    kind: Gateway
    name: private
    namespace: home
  - group: gateway.networking.k8s.io
    kind: Gateway
    name: ts
    namespace: home
  hostnames:
  - readarr.${CLUSTER_DOMAIN}
  rules:
  - backendRefs:
    - group: ''
      kind: Service
      name: readarr
      port: 8787
      weight: 1
    matches:
    - path:
        type: PathPrefix
        value: /
